[package]
name = "LearnRust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-beta.1"
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.134"
inquire = "0.7.5"
rusqlite = "0.32.1"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
actix-web = "4"
uuid = { version = "1", features = ["v4", "serde"] }  # Added "serde" feature
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.6"